@@ -25,12 +25,9 @@ class Smarty_Internal_Compile_Forelse extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        $_open_tag = $this->_close_tag(array('for', 'forarray'));
+        $this->_close_tag(array('for', 'forarray'));
         $this->_open_tag('forelse');
-        if ($_open_tag == 'forarray')
-            return "<?php }}} else { ?>";
-        else
-            return "<?php }} else { ?>";
+        return "<?php }} else { ?>";
     } 
 } 
 
